<resources>
    <string name="app_name">Nimble ME!</string>
    <string name="app_description_1">Modern, easy and fast</string>
    <string name="app_description_2"> Markdown Editor for Android</string>
    <string name="title_activity_writing">WritingActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">OK</string>

    <string name="action_other_operate">Other Operations</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="action_preview">Preview</string>
    <string name="about">About</string>
    <string name="app_description">Modern, easy and fast Markdown Editor for Android</string>
    <string name="about_author">Arshad Ali Soomro</string>
    <string name="author_description_1">App Developer</string>
    <string name="settings_googleplus">Join the community on Google+</string>
    <string name="action_about">About</string>
    <string name="app_codename_beta">beta</string>
    <string name="app_codename">Igneous</string>
    <string name="about_app_markdown"></string>
</resources>
