<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:id="@+id/relativeLayout1">
        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:background="@color/colorPrimary"
            android:layout_height="180dp" />
        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="22dp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_below="@id/app_icon"
            android:layout_centerHorizontal="true" />
        <TextView
            android:id="@+id/app_description"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/app_description"
            android:lines="3"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:layout_below="@id/app_name"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeLayout1">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/about_1"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:foreground="?android:attr/selectableItemBackground">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="10dp"
                    android:maxWidth="80dp"
                    android:maxHeight="80dp"
                    android:src="@drawable/arshad_1" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">
                    <TextView
                        android:fontFamily="sans-serif-light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_author"
                        android:textSize="22sp" />
                    <TextView
                        android:fontFamily="sans-serif-thin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author_description_1"
                        android:textSize="18sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/about_nimbleME"
                android:layout_below="@id/about_1"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:foreground="?android:attr/selectableItemBackground">

                <org.lib.MarkdownPreviewView
                    android:id="@+id/about_markdownView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_x="-12dp"
                    android:layout_y="-5dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/about_googleplus"
                android:layout_below="@id/about_nimbleME"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardBackgroundColor="@color/card_orange">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_googleplus" />
                <TextView
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_googleplus"
                    android:lines="2"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="70dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginEnd="30dp" />
            </android.support.v7.widget.CardView>


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>