<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016. Arshad Ali <arshadalisoomro7@gmail.com.com>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.arshad.nimbleme.SplashActivity"
    android:background="@color/colorPrimary">

    <ImageView
        android:alpha="0"
        app:srcCompat="@drawable/ic_launcher_splash"
        android:id="@+id/iv"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.39"
        android:layout_width="180dp"
        android:layout_height="180dp" />

    <TextView
        android:alpha="0"
        android:gravity="center"
        android:textSize="30sp"
        android:fontFamily="sans-serif-light"
        android:textColor="?android:textColorPrimaryInverse"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toBottomOf="@+id/iv"
        app:layout_constraintVertical_bias="0.060000002"
        app:layout_constraintRight_toRightOf="@+id/iv"
        app:layout_constraintLeft_toLeftOf="@+id/iv"
        android:layout_marginTop="8dp" />

    <TextView
        android:alpha="0"
        android:gravity="center"
        android:textSize="22sp"
        android:fontFamily="sans-serif-light"
        android:textColor="?android:textColorPrimaryInverse"
        android:text="@string/app_description_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv"
        app:layout_constraintVertical_bias="0.060000002"
        app:layout_constraintRight_toRightOf="@+id/iv"
        app:layout_constraintLeft_toLeftOf="@+id/iv"
        android:layout_marginTop="32dp" />
    <TextView
        android:alpha="0"
        android:gravity="center"
        android:textSize="18sp"
        android:fontFamily="sans-serif-light"
        android:textColor="?android:textColorPrimaryInverse"
        android:text="@string/app_description_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv3"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv2"
        app:layout_constraintVertical_bias="0.060000002"
        app:layout_constraintRight_toRightOf="@+id/iv"
        app:layout_constraintLeft_toLeftOf="@+id/iv"
        android:layout_marginTop="8dp" />
</android.support.constraint.ConstraintLayout>
